# langchain-data-analysis

./: .env.example  .gitignore  AGENTS.md  README.md  plan  pyproject.toml
app/: assets.py  config.py  db.py  interactive_query.py  interactive_state.py  interactive_store.py  layer1_router.py  layer2_risk.py  layer3_controlled_t2sql.py  layer4_feedback.py  llm.py  main.py  models.py  result_analysis.py  sql_compiler.py  template_engine.py  time_parser.py  vector_index.py
assets/: metrics.seed.json  terms.seed.json
frontend/: app.js  index.html  style.css
scripts/: build_vector_index.py  eval_cases.json  generate_test_data.py  init_db.py  run_eval.py  seed_assets.py  seed_material_bom_list_info.py
tests/: test_risk_rules.py  test_time_parser.py
